--- a/src/ZendSample/application/views/scripts/home/index.phtml
+++ b/src/ZendSample/application/views/scripts/home/index.phtml
@@ -1,6 +1,6 @@
 <?php
 // page title
-$this->headTitle("Welcome Page");
+$this->headTitle("Home");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
@@ -11,10 +11,10 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <h1>This is Top Page.</h1>
+    <h1>This is your home.</h1>
     <div>
-        <form method="GET" action="/ZendSample/public/welcome/signin">
-            <input type="submit" value="Sign in">
+        <form method="GET" action="/ZendSample/public/welcome/signout">
+            <input type="submit" value="Sign out">
         </form>
     </div>
 </div>
