--- a/src/ZendSample/application/views/scripts/welcome/signin.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/signin.phtml
@@ -1,6 +1,6 @@
 <?php
 // page title
-$this->headTitle("Welcome Page");
+$this->headTitle("Sign in");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
@@ -11,9 +11,11 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <h1>This is Top Page.</h1>
+    <h1>This is the Sign-in page.</h1>
     <div>
-        <form method="GET" action="/ZendSample/public/welcome/signin">
+        <form method="POST" action="/ZendSample/public/welcome/signin">
+            <input type="email" placeholder="Email" name="user_email" ><br>
+            <input type="password" placeholder="Password" name="user_password" ><br>
             <input type="submit" value="Sign in">
         </form>
     </div>
