create sign-up feature

--- a/src/ZendSample/application/views/scripts/welcome/signin.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/signin.phtml
@@ -18,5 +18,9 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
             <input type="password" placeholder="Password" name="user_password" ><br>
             <input type="submit" value="Sign in">
         </form>
+        <p>Do you have no accounts?</p>
+        <form method="GET" action="/ZendSample/public/welcome/signup">
+            <input type="submit" value="Sign up">
+        </form>
     </div>
 </div>
