add initial data

--- a/src/ZendSample/application/views/scripts/home/index.phtml
+++ b/src/ZendSample/application/views/scripts/home/index.phtml
@@ -18,7 +18,13 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
         </form>
     </div>
     <div>
-        <?= $this->allTasks[0]->getTaskTitle() ?><br>
-        <?= $this->allTasks[0]->getTaskContent() ?>
+        <?php
+            foreach($this->allTasks as $task) {
+                print $task->getTaskTitle();
+                print '<br>';
+                print $task->getTaskContent();
+                print '<br>';
+            }
+        ?>
     </div>
 </div>
