--- a/src/ZendSample/application/views/scripts/home/newtask.phtml
+++ b/src/ZendSample/application/views/scripts/home/newtask.phtml
@@ -11,17 +11,22 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <h1>Let me know your new task.</h1>
-    <div>
-        <form method="POST" action="/ZendSample/public/home/newtask">
-            <input type="text" placeholder="Title" name="task_title" ><br>
-            <input type="text" placeholder="Content" name="task_content" ><br>
-            <input type="submit" value="Register">
-        </form>
+    <div class="container">
+        <h1>Let me know your new task.</h1>
     </div>
-    <div>
-        <form method="GET" action="/ZendSample/public/home/index">
-            <input type="submit" value="Back to home">
-        </form>
+    <div class="container">
+        <div class="d-grid gap-3 col-4 mx-auto">
+            <form method="POST" action="/ZendSample/public/home/newtask">
+                <input class="form-control" type="text" placeholder="Title" name="task_title" ><br>
+                <input class="form-control" type="text" placeholder="Content" name="task_content" ><br>
+                <input class="btn btn-primary" type="submit" value="Register">
+            </form>
+        </div>
+    </div>
+    <br>
+    <div class="container">
+        <div class="d-grid gap-3 col-2 mx-auto">
+            <a class="btn btn-primary" href="/ZendSample/public/home/index" role="botton">Back to home</a>
+        </div>
     </div>
 </div>
