--- a/src/ZendSample/application/views/scripts/welcome/signup.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/signup.phtml
@@ -11,12 +11,16 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <h1>Let's make your account.</h1>
-    <div>
-        <form method="POST" action="/ZendSample/public/welcome/signup">
-            <input type="email" placeholder="Email" name="user_email" ><br>
-            <input type="password" placeholder="Password" name="user_password" ><br>
-            <input type="submit" value="Sign up">
-        </form>
+    <div class="container">
+        <h1>Let's make your account.</h1>
+    </div>
+    <div class="container">
+        <div class="d-grid gap-3 col-4 mx-auto">
+            <form method="POST" action="/ZendSample/public/welcome/signup">
+                <input class="form-control" type="email" placeholder="Email" name="user_email" ><br>
+                <input class="form-control" type="password" placeholder="Password" name="user_password" ><br>
+                <input class="btn btn-primary" type="submit" value="Sign up">
+            </form>
+        </div>
     </div>
 </div>
