we can register task status

--- a/src/ZendSample/application/views/scripts/home/index.phtml
+++ b/src/ZendSample/application/views/scripts/home/index.phtml
@@ -27,6 +27,8 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
                 print '<br>';
                 print $task->getTaskContent();
                 print '<br>';
+                print $task->getTaskStatus();
+                print '<br>';
             }
         ?>
     </div>
