--- a/src/ZendSample/application/views/scripts/home/newtask.phtml
+++ b/src/ZendSample/application/views/scripts/home/newtask.phtml
@@ -17,8 +17,8 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     <div class="container">
         <div class="d-grid gap-3 col-4 mx-auto">
             <form method="POST" action="/ZendSample/public/home/newtask">
-                <input class="form-control" type="text" placeholder="Title" name="task_title" ><br>
-                <input class="form-control" type="text" placeholder="Content" name="task_content" ><br>
+                <input class="form-control" type="text" placeholder="Title" name="<?= TASK_TITLE ?>" ><br>
+                <input class="form-control" type="text" placeholder="Content" name="<?= TASK_CONTENT ?>" ><br>
                 <select class="form-select" name="<?= TASK_STATUS ?>">
                     <option value="<?= TASK_TO_DO ?>" selected><?= TASK_TO_DO ?></option>
                     <option value="<?= TASK_IN_PROGRESS ?>"><?= TASK_IN_PROGRESS ?></option>
