--- a/src/ZendSample/application/views/layouts/common-footer.phtml
+++ b/src/ZendSample/application/views/layouts/common-footer.phtml
@@ -1,3 +1,4 @@
-<p class="content_footer">
+<div class="content_footer fs-6">
+    <hr class="bg-primary">
     <?= $this->content_footer_text ?>
-</p>
+</div>
