--- a/src/ZendSample/application/views/layouts/common-header.phtml
+++ b/src/ZendSample/application/views/layouts/common-header.phtml
@@ -1,3 +1,21 @@
-<p class="content_header">
-    <?= $this->content_header_title ?>
-</p>
+<nav class="content_header navbar navbar-expand-lg navbar-dark bg-primary" style="background-color: #e3f2fd;">
+    <div class="container-fluid">
+        <h1 class="navbar-brand fs-1">Your Kanban</h1>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-6">
+                <li class="nav-item">
+                    <a class="nav-link active" href="/ZendSample/public/welcome/signout">Sign out</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/ZendSample/public/welcome/signin">Sign in</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" href="/ZendSample/public/welcome/signup">Sign up</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
