--- a/src/ZendSample/application/views/scripts/home/index.phtml
+++ b/src/ZendSample/application/views/scripts/home/index.phtml
@@ -4,43 +4,38 @@ $this->headTitle("Home");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
-$this->assign("content_header_title", "Common Header");
-$this->assign("content_footer_text", "Common Footer");
+$this->assign("content_footer_text", "© ZendSample 2021");
 // stylesheet
 $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
-// script
-$this->headScript()->appendFile("/ZendSample/js/home/taskCard.js");
+$this->headLink()->appendStylesheet("/ZendSample/css/home/index.css");
 ?>
 
 <div class="content">
     <div class="container">
-        <h1>This is your home.</h1>
-    </div>
-    <div class="container">
-        <div class="d-grid gap-3 col-2 mx-auto">
-            <a class="btn btn-primary" href="/ZendSample/public/welcome/signout" role="botton">Sign out</a>
-            <a class="btn btn-primary" href="/ZendSample/public/home/newtask" role="botton">New task</a>
+        <div class="d-grid d-md-flex justify-content-md-end">
+            <a class="btn btn-primary" href="/ZendSample/public/home/newtask" role="button">New task</a>
         </div>
     </div>
     <div class="container">
         <div class="row align-items-start">
             <?php foreach($this->taskStatus as $status) { ?>
                 <div class="col">
-                <h2><?= $status ?></h2>
+                <h2 class="fs-2"><?= $status ?></h2>
                 <?php
                     foreach($this->allTasks as $task) {
                         if ($task->getTaskStatus() == $status) {
                 ?>
-                            <div class="card">
+                            <div class="card bg-light border border-dark">
                                 <div>
                                     <div class="card-body">
-                                        <div class="card-title">
+                                        <div class="card-title fs-4">
                                             <?= $task->getTaskTitle() ?>
                                         </div>
-                                        <div class="card-text">
+                                        <hr>
+                                        <div class="card-text fs-5">
                                             <?= $task->getTaskContent() ?>
                                         </div>
-                                        <div class="card-text">
+                                        <div class="card-text fs-5">
                                             <?= $task->getTaskStatus() ?>
                                         </div>
                                     </div>
@@ -69,9 +64,9 @@ $this->headScript()->appendFile("/ZendSample/js/home/taskCard.js");
                                         <input class="form-control" type="text" name="<?= TASK_TITLE ?>" value="<?= $task->getTaskTitle() ?>" ><br>
                                         <input class="form-control" type="text" name="<?= TASK_CONTENT ?>" value="<?= $task->getTaskContent() ?>" ><br>
                                         <select class="form-select" name="<?= TASK_STATUS ?>">
-                                            <option value="<?= TASK_TO_DO ?>" <?php if ($task->getTaskStatus() == $status) { ?>selected<?php } ?>><?= TASK_TO_DO ?></option>
-                                            <option value="<?= TASK_IN_PROGRESS ?>" <?php if ($task->getTaskStatus() == $status) { ?>selected<?php } ?>><?= TASK_IN_PROGRESS ?></option>
-                                            <option value="<?= TASK_DONE ?>" <?php if ($task->getTaskStatus() == $status) { ?>selected<?php } ?>><?= TASK_DONE ?></option>
+                                            <option value="<?= TASK_TO_DO ?>" <?php if ($task->getTaskStatus() == TASK_TO_DO) { ?>selected<?php } ?>><?= TASK_TO_DO ?></option>
+                                            <option value="<?= TASK_IN_PROGRESS ?>" <?php if ($task->getTaskStatus() == TASK_IN_PROGRESS) { ?>selected<?php } ?>><?= TASK_IN_PROGRESS ?></option>
+                                            <option value="<?= TASK_DONE ?>" <?php if ($task->getTaskStatus() == TASK_DONE) { ?>selected<?php } ?>><?= TASK_DONE ?></option>
                                         </select><br>
                                         <input class="btn btn-success" type="submit" value="Update">
                                     </form>
