--- a/src/ZendSample/application/views/layouts/common-footer.phtml
+++ b/src/ZendSample/application/views/layouts/common-footer.phtml
@@ -1,4 +1,4 @@
 <div class="content_footer fs-6">
     <hr class="bg-primary">
-    <?= $this->content_footer_text ?>
+    <p>© ZendSample 2021</p>
 </div>
