--- a/src/ZendSample/application/views/layouts/common-header.phtml
+++ b/src/ZendSample/application/views/layouts/common-header.phtml
@@ -1,6 +1,8 @@
 <nav class="content_header navbar navbar-expand-lg navbar-dark bg-primary" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-        <h1 class="navbar-brand fs-1">Your Kanban</h1>
+        <a href="/ZendSample/public/welcome/index">
+            <p class="navbar-brand fs-1">Your Kanban</p>
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
