--- a/src/ZendSample/application/views/scripts/home/newtask.phtml
+++ b/src/ZendSample/application/views/scripts/home/newtask.phtml
@@ -4,15 +4,14 @@ $this->headTitle("Home");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
-$this->assign("content_header_title", "Common Header");
-$this->assign("content_footer_text", "Common Footer");
 // stylesheet
+$this->headLink()->appendStylesheet("/ZendSample/css/normalize.css");
 $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <div class="container">
-        <h2>Let me know your new task.</h2>
+    <div class="container page-title">
+        <h1>Let me know your new task.</h1>
     </div>
     <div class="container">
         <div class="d-grid gap-3 col-4 mx-auto">
@@ -31,7 +30,7 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     <br>
     <div class="container">
         <div class="d-grid gap-3 col-2 mx-auto">
-            <a class="btn btn-primary" href="/ZendSample/public/home/index" role="botton">Back to home</a>
+            <a class="btn btn-primary" href="/ZendSample/public/home/index" role="button">Back to home</a>
         </div>
     </div>
 </div>
