--- a/src/ZendSample/application/views/scripts/welcome/index.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/index.phtml
@@ -4,20 +4,19 @@ $this->headTitle("Welcome Page");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
-$this->assign("content_header_title", "Common Header");
-$this->assign("content_footer_text", "Common Footer");
 // stylesheet
+$this->headLink()->appendStylesheet("/ZendSample/css/normalize.css");
 $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <div class="container">
-        <h2>This is Top Page.</h2>
+    <div class="container page-title">
+        <h1>Your Kanban will simpliry your busy life.</h1>
     </div>
     <div class="container">
-        <div class="d-grid gap-3 col-6 mx-auto">
-            <a class="btn btn-primary" href="/ZendSample/public/welcome/signin" role="botton">Sign in</a>
-            <a class="btn btn-primary" href="/ZendSample/public/welcome/signup" role="botton">Sign up</a>
+        <div class="d-grid gap-3 col-3 mx-auto">
+            <a class="btn btn-primary btn-sm" href="/ZendSample/public/welcome/signin" role="button">Sign in</a>
+            <a class="btn btn-primary btn-sm" href="/ZendSample/public/welcome/signup" role="button">Sign up</a>
         </div>
     </div>
 </div>
