--- a/src/ZendSample/application/views/scripts/welcome/signin.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/signin.phtml
@@ -4,17 +4,16 @@ $this->headTitle("Sign in");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
-$this->assign("content_header_title", "Common Header");
-$this->assign("content_footer_text", "Common Footer");
 // stylesheet
+$this->headLink()->appendStylesheet("/ZendSample/css/normalize.css");
 $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <div class="container">
-        <h2>This is the Sign-in page.</h2>
+    <div class="container page-title">
+        <h1>This is the Sign-in page.</h1>
     </div>
-    <div class="container">
+    <div class="container form-container">
         <div class="d-grid gap-3 col-4 mx-auto">
             <form method="POST" action="/ZendSample/public/welcome/signin">
                 <input class="form-control" type="email" placeholder="Email" name="<?= USER_EMAIL ?>" ><br>
@@ -26,7 +25,7 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     <div class="container">
         <div>
             <p>Do you have no accounts?</p>
-            <a class="btn btn-primary" href="/ZendSample/public/welcome/signup" role="botton">Sign up</a>
+            <a class="btn btn-primary" href="/ZendSample/public/welcome/signup" role="button">Sign up</a>
         </div>
     </div>
 </div>
