--- a/src/ZendSample/application/views/scripts/welcome/signup.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/signup.phtml
@@ -4,23 +4,28 @@ $this->headTitle("Sign up");
 // header and footer
 $this->assign("content_header", "common-header.phtml");
 $this->assign("content_footer", "common-footer.phtml");
-$this->assign("content_header_title", "Common Header");
-$this->assign("content_footer_text", "Common Footer");
 // stylesheet
+$this->headLink()->appendStylesheet("/ZendSample/css/normalize.css");
 $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
 ?>
 
 <div class="content">
-    <div class="container">
-        <h2>Let's make your account.</h2>
+    <div class="container page-title">
+        <h1>Let's make your account.</h1>
     </div>
-    <div class="container">
+    <div class="container form-container">
         <div class="d-grid gap-3 col-4 mx-auto">
             <form method="POST" action="/ZendSample/public/welcome/signup">
                 <input class="form-control" type="email" placeholder="Email" name="<?= USER_EMAIL ?>" ><br>
                 <input class="form-control" type="password" placeholder="Password" name="<?= USER_PASSWORD ?>" ><br>
                 <input class="btn btn-primary" type="submit" value="Sign up">
             </form>
+        </div>
+    </div>
+    <div class="container">
+        <div>
+            <p>Do you have your own account?</p>
+            <a class="btn btn-primary" href="/ZendSample/public/welcome/signin" role="button">Sign in</a>
         </div>
     </div>
 </div>
