--- a/src/ZendSample/css/common-layout.css
+++ b/src/ZendSample/css/common-layout.css
@@ -1,22 +1,13 @@
-/* A Modern CSS Reset */
-*,*::before,*::after{box-sizing:border-box}body,h1,h2,h3,h4,p,figure,blockquote,dl,dd{margin:0}ul[role="list"],ol[role="list"]{list-style:none}html:focus-within{scroll-behavior:smooth}body{min-height:100vh;text-rendering:optimizeSpeed;line-height:1.5}a:not([class]){text-decoration-skip-ink:auto}img,picture{max-width:100%;display:block}input,button,textarea,select{font:inherit}@media(prefers-reduced-motion:reduce){html:focus-within{scroll-behavior:auto}*,*::before,*::after{animation-duration:.01ms !important;animation-iteration-count:1 !important;transition-duration:.01ms !important;scroll-behavior:auto !important}}
-
 /* common CSS */
 body {
     text-align: center;
     margin: 0%;
 }
 
-.content_header {
-    font-size: 16px;
-    font-weight: bold;
+.page-title {
+    margin-top: 5rem;
 }
 
-.content {
-    background: #fff;
-}
-
-.content_footer {
-    text-align: center;
-    font-size: 8pt;
+.form-container {
+    margin-top: 2rem;
 }
