--- a/src/ZendSample/application/views/layouts/common-header.phtml
+++ b/src/ZendSample/application/views/layouts/common-header.phtml
@@ -1,6 +1,6 @@
 <nav class="content_header navbar navbar-expand-lg navbar-dark bg-primary" style="background-color: #e3f2fd;">
     <div class="container-fluid">
-        <a href="/ZendSample/public/welcome/index">
+        <a href="/kanban/welcome/index">
             <p class="navbar-brand fs-1">Your Kanban</p>
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -10,14 +10,14 @@
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 fs-6">
                 <?php if ($this->isLogin == '1') { ?>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/ZendSample/public/welcome/signout">Sign out</a>
+                    <a class="nav-link active" href="/kanban/welcome/signout">Sign out</a>
                 </li>
                 <?php } else { ?>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/ZendSample/public/welcome/signin">Sign in</a>
+                    <a class="nav-link active" href="/kanban/welcome/signin">Sign in</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link active" href="/ZendSample/public/welcome/signup">Sign up</a>
+                    <a class="nav-link active" href="/kanban/welcome/signup">Sign up</a>
                 </li>
                 <?php } ?>
             </ul>
