--- a/src/ZendSample/application/views/scripts/home/newtask.phtml
+++ b/src/ZendSample/application/views/scripts/home/newtask.phtml
@@ -15,7 +15,7 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     </div>
     <div class="container">
         <div class="d-grid gap-3 col-4 mx-auto">
-            <form method="POST" action="/ZendSample/public/home/newtask">
+            <form method="POST" action="/kanban/home/newtask">
                 <input class="form-control" type="text" placeholder="Title" name="<?= TASK_TITLE ?>" ><br>
                 <input class="form-control" type="text" placeholder="Content" name="<?= TASK_CONTENT ?>" ><br>
                 <select class="form-select" name="<?= TASK_STATUS ?>">
@@ -30,7 +30,7 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     <br>
     <div class="container">
         <div class="d-grid gap-3 col-2 mx-auto">
-            <a class="btn btn-primary" href="/ZendSample/public/home/index" role="button">Back to home</a>
+            <a class="btn btn-primary" href="/kanban/home/index" role="button">Back to home</a>
         </div>
     </div>
 </div>
