--- a/src/ZendSample/application/views/scripts/welcome/index.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/index.phtml
@@ -15,8 +15,8 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     </div>
     <div class="container">
         <div class="d-grid gap-3 col-3 mx-auto">
-            <a class="btn btn-primary btn-sm" href="/ZendSample/public/welcome/signin" role="button">Sign in</a>
-            <a class="btn btn-primary btn-sm" href="/ZendSample/public/welcome/signup" role="button">Sign up</a>
+            <a class="btn btn-primary btn-sm" href="/kanban/welcome/signin" role="button">Sign in</a>
+            <a class="btn btn-primary btn-sm" href="/kanban/welcome/signup" role="button">Sign up</a>
         </div>
     </div>
 </div>
