--- a/src/ZendSample/application/views/scripts/welcome/signin.phtml
+++ b/src/ZendSample/application/views/scripts/welcome/signin.phtml
@@ -15,7 +15,7 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     </div>
     <div class="container form-container">
         <div class="d-grid gap-3 col-4 mx-auto">
-            <form method="POST" action="/ZendSample/public/welcome/signin">
+            <form method="POST" action="/kanban/welcome/signin">
                 <input class="form-control" type="email" placeholder="Email" name="<?= USER_EMAIL ?>" ><br>
                 <input class="form-control" type="password" placeholder="Password" name="<?= USER_PASSWORD ?>" ><br>
                 <input class="btn btn-primary" type="submit" value="Sign in">
@@ -25,7 +25,7 @@ $this->headLink()->appendStylesheet("/ZendSample/css/common-layout.css");
     <div class="container">
         <div>
             <p>Do you have no accounts?</p>
-            <a class="btn btn-primary" href="/ZendSample/public/welcome/signup" role="button">Sign up</a>
+            <a class="btn btn-primary" href="/kanban/welcome/signup" role="button">Sign up</a>
         </div>
     </div>
 </div>
