--- a/src/todoapp/application/css/home/index.css
+++ b/src/todoapp/application/css/home/index.css
@@ -3,12 +3,12 @@
     margin-top: 5rem;
 }
 
-.newtask-button {
+.newtask-button, .card-area {
     margin-top: 2rem;
 }
 
-.card-area {
-    margin-top: 2rem;
+.task-col {
+    width: 33.33%;
 }
 
 .task-card {
@@ -19,6 +19,37 @@
     text-align: center;
 }
 
-.task-title {
+.notation {
+    font-style: oblique;
+    font-size: 0.8rem;
+    color: #808080;
+    margin-right: 1rem;
+    display: inline-block;
+    width: 3rem;
     text-align: center;
+}
+
+.card-button-area {
+    text-align: end;
+    margin-bottom: 0.1rem;
+    margin-right: 0.1rem;
+}
+
+.card-button, .card-button form {
+    display: inline-block;
+    width: 5rem;
+    height: 2.5rem;
+}
+
+.card-button .btn {
+    width: 100%;
+    height: 100%;
+}
+
+.collapsed-area {
+    margin: 0.4rem;
+}
+
+.update-button {
+    text-align: end;
 }
